fixed wrong endScroll computation on firefox

--- a/components/hn_list.css
+++ b/components/hn_list.css
@@ -1,3 +1,6 @@
+.list {
+    padding-bottom: 64px;
+}
 .list > div {
     padding-right: 16px;
 }
