--- a/css/app.css
+++ b/css/app.css
@@ -65,7 +65,6 @@ footer {
 .scrollable {
     position: absolute;
     top: 64px; left: 0; right: 0; bottom: 0;
-    padding-bottom: 64px;
     overflow-y: auto;
 }
 
